# video-game-module

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
.github/workflows/: build.yml
app/: CMakeLists.txt  bitmaps.c  bitmaps.h  frame.c  frame.h  led.c  led.h  led_state.c  led_state.h  main.c  uart.c  uart.h  usb.c  usb.h
app/cli/: cli.cpp  cli.h  cli_command_device_info.cpp  cli_command_gpio.cpp  cli_command_imu.cpp  cli_commands.cpp  cli_commands.h
config/: FreeRTOSConfig.h
scripts/: get_env.py
